# django-neomodel

./: .gitignore  .travis.yml  AUTHORS.txt  Changelog  MANIFEST.in  README.md  README.rst  TODO  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.db
.github/workflows/: codeql-analysis.yml  codeql.yml  integration-tests.yml
django_neomodel/: __init__.py  admin.py  apps.py
django_neomodel/management/commands/: _remove_labels.py  clear_neo4j.py  install_labels.py  remove_labels.py  update_labels.py
neo4jWebapp/: db.sqlite3  manage.py
neo4jWebapp/data/: apps.py  models.py  urls.py  views.py
neo4jWebapp/data/migrations/: 0001_initial.py
neo4jWebapp/data/templates/data/: data_list.html  data_page.html
neo4jWebapp/entry/: apps.py  forms.py  models.py  urls.py  views.py
neo4jWebapp/entry/migrations/: 0001_initial.py
neo4jWebapp/entry/templates/entry/: connector.html  entry.html  equipment.html  lru.html  (+2 more)
neo4jWebapp/home/: urls.py  views.py
neo4jWebapp/neo4jWebapp/: asgi.py  neo4j_functions.py  settings.py  urls.py  wsgi.py
neo4jWebapp/userSignIn/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
neo4jWebapp/userSignIn/migrations/: 0001_initial.py  0002_sncuser_user_password_alter_sncuser_user_name.py
tests/: .env  Dockerfile  docker-compose.yml  docker-entrypoint.sh  requirements.txt  settings.py  urls.py
tests/someapp/: admin.py  models.py  views.py
tests/someapp/migrations/: 0001_initial.py
tests/someapp/tests/: __init__.py  test_atomicity.py  test_commands.py  test_model_form.py  test_sanity.py  test_signals.py
(+10 files in other folders)
